modified fill_blank style

--- a/html/test.html
+++ b/html/test.html
@@ -69,14 +69,16 @@
             <div class="panel-body">
                 <ol>
                     <li>UML的中文全称是：
-                        <div><input type="text" name="fill_1"></div>
+                        <div class="form-inline">
+                          <input type="text" class="form-control" name="fill_1"  class="form-control">
+                        </div>
                     </li>
                     <br>
                     <li>对象最突出的特征是：
-                        <div>
-                            <input type="text" name="fill_2">
-                            <input type="text" name="fill_2">
-                            <input type="text" name="fill_2">
+                        <div class="form-inline">
+                            <input type="text" class="form-control" name="fill_2" class="form-control">
+                            <input type="text" class="form-control" name="fill_2" class="form-control">
+                            <input type="text" class="form-control" name="fill_2" class="form-control">
                         </div>
                     </li>
                 </ol>
@@ -236,7 +238,7 @@
             <div class="panel-body">
                 <ol>
                     <li>简述什么是模型以及模型的表现形式?<br></li>
-                    <textarea rows="10" cols="100" id="q_a"></textarea><br>
+                    <textarea class="form-control" rows="3" id="q_a"></textarea><br>
                 </ol>
             </div>
         </div>
