--- a/html/test.html
+++ b/html/test.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh-CN" xmlns="http://www.w3.org/1999/html">
 <meta charset="UTF-8">
 <head>
     <title>统一建模理论测试</title>
@@ -7,8 +7,10 @@
     <!--add css file-->
     <link rel="stylesheet" href="../lib/bootstrap-3.2.0-dist/css/bootstrap.css"/>
     <!--add js file-->
+    <script src="../lib/jquery-2.1.1/jquery-2.1.1.js"></script>
     <script src="../lib/bootstrap-3.2.0-dist/js/bootstrap.min.js"></script>
-    <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
+
+    <script type="text/javascript" src="../js/topic.js"></script>
     <script type="text/javascript" src="../js/head.js"></script>
     <script type="text/javascript" src="../js/fill_blank.js"></script>
     <script type="text/javascript" src="../js/score.js"></script>
@@ -16,6 +18,7 @@
     <script type="text/javascript" src="../js/chooses.js"></script>
     <script type="text/javascript" src="../js/gudge.js"></script>
     <script type="text/javascript" src="../js/q_a.js"></script>
+    <script type="text/javascript" src="../js/answers.js"></script>
 </head>
 <body>
 <div class="container">
@@ -31,7 +34,7 @@
                 <div class="row h4">
                     <div class="col-md-4">考试科目：统一建模语言UML</div>
                     <div class="col-md-4">时 间：100分钟</div>
-                    <div class="col-md-4">得 分：<span id="score"></span></div>
+                    <div class="col-md-4" id="score_div">得 分：<span id="score"></span></div>
                 </div>
             </div>
         </div>
@@ -41,18 +44,21 @@
                 <div class="row h4">
 
                     <div class="col-md-4">
+                        班级(必填)：
                         <div id="error_Class">
-                            班级(必填)：<input type="text" class="form-control" name="stu_Class" id="stu_Class">
+                            <input type="text" class="form-control" name="stu_Class" id="stu_Class">
                         </div>
                     </div>
                     <div class="col-md-4">
+                        学号(必填)：
                         <div id="error_Id">
-                            学号(必填)：<input type="text" class="form-control" name="stu_Id" id="stu_Id">
+                            <input type="text" class="form-control" name="stu_Id" id="stu_Id">
                         </div>
                     </div>
                     <div class="col-md-4">
+                        姓名(必填)：
                         <div id="error_Name">
-                            姓名(必填)：<input type="text" class="form-control" name="stu_Name" id="stu_Name">
+                            <input type="text" class="form-control" name="stu_Name" id="stu_Name">
                         </div>
                     </div>
                 </div>
@@ -151,22 +157,22 @@
                         用例的粒度分为以下哪三种。
                         <div class="checkbox">
                           <lable>
-                            <input type="checkbox" name="chooses_1" value="A">（A）概述级</input>
+                            <input type="checkbox" name="chooses_1" id="chooses_1" value="A">（A）概述级</input>
                           </lable>
                         </div>
                         <div class="checkbox">
                           <lable>
-                            <input type="checkbox" name="chooses_1" value="B">（B）需求级</input>
+                            <input type="checkbox" name="chooses_1" id="chooses_1" value="B">（B）需求级</input>
                           </lable>
                         </div>
                         <div class="checkbox">
                           <lable>
-                            <input type="checkbox" name="chooses_1" value="C">（C）用户目标级</input>
+                            <input type="checkbox" name="chooses_1" id="chooses_1" value="C">（C）用户目标级</input>
                           </lable>
                         </div>
                         <div class="checkbox">
                           <lable>
-                            <input type="checkbox" name="chooses_1" value="D">（D）子功能集</input>
+                            <input type="checkbox" name="chooses_1" id="chooses_1" value="D">（D）子功能集</input>
                           </lable>
                         </div>
                     </li>
@@ -174,22 +180,22 @@
                         类图由以下哪三部分组成。
                         <div class="checkbox">
                           <lable>
-                            <input type="checkbox" name="chooses_2" value="A">（A）名称(Name)</input>
+                            <input type="checkbox" name="chooses_2" id="chooses_2" value="A">（A）名称(Name)</input>
                           </lable>
                         </div>
                         <div class="checkbox">
                           <lable>
-                        <input type="checkbox" name="chooses_2" value="B">（B）属性(Attribute)</input>
+                        <input type="checkbox" name="chooses_2" id="chooses_2" value="B">（B）属性(Attribute)</input>
                           </lable>
                         </div>
                         <div class="checkbox">
                           <lable>
-                        <input type="checkbox" name="chooses_2" value="C">（C）操作(Operation)</input>
+                        <input type="checkbox" name="chooses_2" id="chooses_2" value="C">（C）操作(Operation)</input>
                           </lable>
                         </div>
                         <div class="checkbox">
                           <lable>
-                        <input type="checkbox" name="chooses_2" value="D">（D）方法（Function）</input>
+                        <input type="checkbox" name="chooses_2" id="chooses_2" value="D">（D）方法（Function）</input>
                           </lable>
                         </div>
                     </li>
@@ -237,13 +243,29 @@
             </div>
             <div class="panel-body">
                 <ol>
-                    <li>简述什么是模型以及模型的表现形式?<br></li>
-                    <textarea class="form-control" rows="3" id="q_a"></textarea><br>
+                    <li><div>简述什么是模型以及模型的表现形式?</div></li>
+                    <textarea class="form-control" rows="3" id="q_a" name="q_a"></textarea><br>
                 </ol>
             </div>
         </div>
         <div class="text-center">
-            <input type="button" value="提交" class="btn btn-primary text-center" onclick="checkInfo();getScore()">
+            <input type="button"  id="ok_button" class="btn btn-primary text-center" value="提交"/>
+        </div>
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                        <h4 class="modal-title text-center"><label>注意:</label></h4>
+                    </div>
+                    <div class="modal-body">
+                       <p>请输入必填信息</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">ok</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </form>
 </div>
